--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -28,8 +28,9 @@
   <script src="/javascripts/static/simditor.js"></script>
   <script src="/javascripts/static/md5.min.js"></script>
   <script src="/javascripts/static/city.min.js"></script>
+  <script src="/javascripts/static/angular-file-upload.min.js"></script>
   
-
+  
   <script src="/javascripts/route.js"></script>
   <script src="/javascripts/controllers/baseCtrl.js"></script>  
   <script src="/javascripts/controllers/indexCtrl.js"></script>
