--- a/views/orders/myorders.hbs
+++ b/views/orders/myorders.hbs
@@ -73,70 +73,56 @@
 
                 </form>
             </div>
-
-
-
-            <div class="panel panel-success">
-                <div class="panel-heading">
-                    <span class="panel-title">送样信息表列表</span>
-                    <button type="button" class="btn btn-primary more">
-                        <span class="glyphicon glyphicon-plus"></span>
-                        新增</button>
-                </div>
-                <div class="panel-body">
-
-                    <table class="table table-striped table-hover table-bordered">
-                        <thead>
-                            <tr>
-                                <th>送样信息表ID</th>
-                                <th>项目ID</th>
-                                <th>送样信息表类型</th>
-                                <th>机构地址</th>
-                                <th>送样信息表状态</th>
-                                <th>收货地址</th>
-                                <th>运单号</th>
-                                <th>操作列</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>1</td>
-                                <td></td>
-                                <td>
-                                    <button type="submit" class="btn btn-primary">编辑查看</button>
-                                    <button type="submit" class="btn btn-info">默认机构</button>
-                                    <button type="submit" class="btn btn-warning">物流</button>
-                                    <button type="button" class="btn btn-danger">删除</button>
-                                    
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>1</td>
-                                <td></td>
-                                <td>
-                                    <button type="submit" class="btn btn-primary">编辑查看</button>
-                                    <button type="submit" class="btn btn-info">默认机构</button>
-                                    <button type="submit" class="btn btn-warning">删除</button>
-                                    <button type="button" class="btn btn-danger">删除</button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-
-                </div>
-            </div>
-
-
-
         </div>
+
+
+        <div class="panel panel-success">
+            <div class="panel-heading">
+                <span class="panel-title">送样信息表列表</span>
+                <a class="btn btn-primary more" href="#!/orders/orderDetail">
+                    <span class="glyphicon glyphicon-plus"></span>
+                    新增</a>
+            </div>
+            <div class="panel-body">
+
+                <table class="table table-striped table-hover table-bordered">
+                    <thead>
+                        <tr>
+                            <th>送样信息表ID</th>
+                            <th>项目ID</th>
+                            <th>送样信息表类型</th>
+                            <th>机构地址</th>
+                            <th>收货地址</th>
+                            <th>运单号</th>
+                            <th>操作列</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                        <tr ng-repeat="x in data">
+                            <td>[[x.orderId]]</td>
+                            <td>[[x.proId]]</td>
+                            <td>[[x.type]]</td>
+                            <td>[[x.institutionText|limitTo:6]]...</td>
+                            <td>[[x.addressText|limitTo:6]]...</td>
+                            <td>[[x.waybillNumber]]</td>
+                            <td>
+                                <span class="btn btn-primary">
+                                    <a href="#!/orders/orderDetail?_id=[[x._id]]&type=edit">编辑查看</a>
+                                </span>
+                                <button type="button" class="btn btn-info" ng-click="">打印</button>
+                                <button type="button" class="btn btn-warning" ng-click="">物流</button>
+                                <button type="button" class="btn btn-danger" ng-click="">删除</button>
+
+
+                            </td>
+                        </tr>
+
+
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
+
     </div>
