--- a/views/index.hbs
+++ b/views/index.hbs
@@ -25,7 +25,7 @@
                     <div class="collapse navbar-collapse navbar-ex1-collapse">
                         <ul class="nav navbar-nav">
                             <li>
-                                <a href="#!/">首页</a>
+                                <a href="#!/" class="">首页</a>
                             </li>
                             <li>
                                 <a href="#!/serviceInfo">服务介绍</a>
