--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel="stylesheet" href="/stylesheets/simditor.css">
+  <link rel="stylesheet" href="/stylesheets/animate.min.css">
 </head>
 
 <body ng-app='orderSystem'>
