--- a/views/login.hbs
+++ b/views/login.hbs
@@ -107,3 +107,10 @@
 
 
 </div>
+
+<script>
+    window.location=window.location.origin+"#!/login";
+   console.log("window.location.origin:"+window.location.origin);
+   console.log("window.location:"+window.location);
+   
+</script>
