--- a/views/users/password.hbs
+++ b/views/users/password.hbs
@@ -9,49 +9,43 @@
             <div class="panel-body">
 
 
-               <form novalidate role="form" class="form-horizontal">
+                <form novalidate role="form" class="form-horizontal">
 
                     <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-1">
-                                <label for="">原密码</label>
-                            </div>
-                            <div class="col-md-3">
-                                <input type="text" class="form-control" name="accountname" />
-                            </div>
+                        <label class="col-sm-2 control-label">
+                            原密码
+                        </label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" name="accountname" />
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-1" class="name-institution">
-                                <label for="">新密码</label>
-                            </div>
-                            <div class="col-md-3">
-                                <input type="text" class="form-control" name="accountname" />
-                            </div>
+                        <label class="col-sm-2 control-label">
+                            新密码
+                        </label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" name="accountname" />
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-1">
-                                <label for="">再次输入新密码</label>
-                            </div>
-                            <div class="col-md-3">
-                                <input type="text" class="form-control" name="accountname" />
-                            </div>
+                        <label class="col-sm-2 control-label">
+                            再次输入新密码
+                        </label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" name="accountname" />
                         </div>
                     </div>
 
                     <div class="form-group">
-                        
-                        <button type="button" class="btn btn-primary">确定</button>
-                        <button type="button" class="btn btn-info">取消</button>                        
-                        
+                        <div class="col-sm-offset-2 col-sm-4">
+                            <button type="button" class="btn btn-primary">确定</button>
+                            <button type="button" class="btn btn-info">取消</button>
+                        </div>
                     </div>
-                    
-               </form>
+
+                </form>
 
             </div>
         </div>
