--- a/views/main.hbs
+++ b/views/main.hbs
@@ -32,7 +32,10 @@
                 <img src="/images/hiseqXTen.jpg" alt="HiSeqX">
             </div>
         </div>
-        <div class="col-md-5">
+
+
+
+        <div class="col-md-5 ng-show='logined'">
             {{!-- 登录 --}}
             <div class="login" ng-show='login'>
                 <h2 ng-hide='loginSuccess'>&nbsp;&nbsp;&nbsp;&nbsp;登录</h2>
@@ -109,7 +112,8 @@
             </div>
 
         </div>
+
+
+
     </div>
-
-
 </div>
