--- a/views/main.hbs
+++ b/views/main.hbs
@@ -35,7 +35,7 @@
 
 
 
-        <div class="col-md-5 ng-show='logined'">
+        <div class="col-md-5" ng-show='logined'>
             {{!-- 登录 --}}
             <div class="login" ng-show='login'>
                 <h2 ng-hide='loginSuccess'>&nbsp;&nbsp;&nbsp;&nbsp;登录</h2>
