--- a/views/error.hbs
+++ b/views/error.hbs
@@ -2,10 +2,12 @@
 <h2>{{error.status}}</h2>
 <pre>{{error.stack}}</pre> --}}
 
-<div class="serviceContant">
+{{!-- <div class="serviceContant">
     <input type="hidden" id="backurl" value={{backurl}} > </input>
   <script>
         localStorage.setItem('backurl',$("#backurl").val());
         window.location=window.location.origin+"/login"
   </script>
-</div>
+</div> --}}
+
+<div>连接错误</div>
