--- a/views/orders/myorders.hbs
+++ b/views/orders/myorders.hbs
@@ -142,6 +142,8 @@
                     </tbody>
                 </table>
 
+                <cici-pagination page-option="option"></cici-pagination>
+
             </div>
         </div>
 
