--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel="stylesheet" href="/stylesheets/simditor.css">
+  <link rel="stylesheet" href="/stylesheets/simditor-html.css">
   <link rel="stylesheet" href="/stylesheets/animate.min.css">
 </head>
 
@@ -30,8 +31,18 @@
   <script src="/javascripts/static/md5.min.js"></script>
   <script src="/javascripts/static/city.min.js"></script>
   <script src="/javascripts/static/angular-file-upload.min.js"></script>
+  <script src="/javascripts/directives/pagination.js"></script>
   
-  
+ 	<script src="/bower_components/simple-module/lib/module.js"></script>
+	<script src="/bower_components/simple-hotkeys/lib/hotkeys.js"></script>
+	<script src="/bower_components/simple-uploader/lib/uploader.js"></script>
+	<script src="/bower_components/simditor/lib/simditor.js"></script>
+	<script src="/bower_components/js-beautify/js/lib/beautify.js"></script>
+	<script src="/bower_components/js-beautify/js/lib/beautify-css.js"></script>
+	<script src="/bower_components/js-beautify/js/lib/beautify-html.js"></script>
+	<script src="/bower_components/simditor-html/lib/simditor-html.js"></script>
+  <script src="/bower_components/angular-simditor/src/angular-simditor.js"></script>
+
   <script src="/javascripts/route.js"></script>
   <script src="/javascripts/controllers/baseCtrl.js"></script>  
   <script src="/javascripts/controllers/indexCtrl.js"></script>
@@ -41,8 +52,9 @@
   <script src="/javascripts/controllers/addressCtrl.js"></script>
   <script src="/javascripts/controllers/addressDetailCtrl.js"></script>  
   <script src="/javascripts/controllers/orderDetailCtrl.js"></script>
+  <script src="/javascripts/controllers/changePwd.js"></script>
 
-  <script src="/javascripts/services/auth.js"></script>
+  
 
 
 
