--- a/views/users/password.hbs
+++ b/views/users/password.hbs
@@ -1,3 +1,24 @@
+<div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">提示信息：</h4>
+            </div>
+            <div class="modal-body">
+                <p>[[message]]</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="closeModal()">确定</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
 <div class="pub-bgcolor">
     <div class="container">
         <h3>密码管理</h3>
@@ -16,7 +37,7 @@
                             原密码
                         </label>
                         <div class="col-sm-6">
-                            <input type="text" class="form-control" name="accountname" />
+                            <input type="text" class="form-control" name="oldpassword" ng-model="user.oldpassword" />
                         </div>
                     </div>
 
@@ -25,7 +46,7 @@
                             新密码
                         </label>
                         <div class="col-sm-6">
-                            <input type="text" class="form-control" name="accountname" />
+                            <input type="text" class="form-control" name="newpassword" ng-model="user.newpassword" />
                         </div>
                     </div>
 
@@ -34,14 +55,14 @@
                             再次输入新密码
                         </label>
                         <div class="col-sm-6">
-                            <input type="text" class="form-control" name="accountname" />
+                            <input type="text" class="form-control" name="renewpassword" ng-model="user.renewpassword" />
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-4">
-                            <button type="button" class="btn btn-primary">确定</button>
-                            <button type="button" class="btn btn-info">取消</button>
+                            <a class="btn btn-primary" ng-click='changePwd()' ng-disabled="!(user.oldpassword&&user.newpassword&&user.renewpassword)">确定</a>
+                            <a class="btn btn-primary" ng-click='cancelPwd()'>取消</a>
                         </div>
                     </div>
 
