--- a/views/users/address.hbs
+++ b/views/users/address.hbs
@@ -72,6 +72,8 @@
                     </tbody>
                 </table>
 
+                <cici-pagination page-option="option"></cici-pagination>
+
             </div>
         </div>
 
