--- a/views/users/institution.hbs
+++ b/views/users/institution.hbs
@@ -103,6 +103,8 @@
                     </tbody>
                 </table>
 
+                <cici-pagination page-option="option"></cici-pagination>
+
             </div>
         </div>
 
