--- a/views/users/password.hbs
+++ b/views/users/password.hbs
@@ -37,7 +37,7 @@
                             原密码
                         </label>
                         <div class="col-sm-6">
-                            <input type="text" class="form-control" name="oldpassword" ng-model="user.oldpassword" />
+                            <input type="password" class="form-control" name="oldpassword" ng-model="user.oldpassword" />
                         </div>
                     </div>
 
@@ -46,7 +46,7 @@
                             新密码
                         </label>
                         <div class="col-sm-6">
-                            <input type="text" class="form-control" name="newpassword" ng-model="user.newpassword" />
+                            <input type="password" class="form-control" name="newpassword" ng-model="user.newpassword" />
                         </div>
                     </div>
 
@@ -55,7 +55,7 @@
                             再次输入新密码
                         </label>
                         <div class="col-sm-6">
-                            <input type="text" class="form-control" name="renewpassword" ng-model="user.renewpassword" />
+                            <input type="password" class="form-control" name="renewpassword" ng-model="user.renewpassword" />
                         </div>
                     </div>
 
